[rewrite] Add `Java8toJava11`
Signed-off-by: Vincent Potucek <vpotucek@me.com>